# mnemosyne

./: .gitignore  CMakeLists.txt  LICENSE  README.md
bench/: CMakeLists.txt  benchmark.cpp
include/mnemosyne/core/: memory_range.hpp
include/mnemosyne/internal/: string_literal.hpp
include/mnemosyne/internal/abi/microsoft/: vfunc_index_impl.hpp
include/mnemosyne/mem/: process.hpp  wrapper.hpp
include/mnemosyne/scan/: scanner.hpp  signature.hpp
src/: cpuid.cpp
src/os/linux/: elf64.hpp  process.cpp
src/os/win32/: process.cpp
src/scan/: scanner.cpp  scanner_avx2.cpp  scanner_impls.hpp
test/: CMakeLists.txt  scanner_test.cpp  signature_test.cpp  vfunc_index_test.cpp
